add swagger